<resources>

    <!-- Main screen strings -->
    <string name="app_name">RIT Dining Planner</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>

    <string name="tigerbucks">Tigerbucks</string>
    <string name="eservices">eServices</string>
    <string name="action_settings">Settings</string>
    <string name="action_dining_services">Dining Services</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset defaults</string>

    <string name="balanceHeader">Balance</string>
    <string name="dateHeader">Date Range</string>

    <string name="currentBalance">Remaining</string>
    <string name="rolloverBalance">Rollover</string>
    <string name="initial">Total Initial</string>
    <string name="custom">Custom</string>
    <string name="total">Total Days Off</string>
    <string name="past">Past Days Off</string>

    <!-- Spinner related values -->
    <string name="mealOption1">Tiger 5 ($1300)</string>
    <string name="mealOption2">Tiger 10 ($700)</string>
    <string name="mealOption3">Tiger 14 ($500)</string>
    <string name="mealOption4">Tiger 20 ($300)</string>
    <string name="mealOption5">Orange ($2669)</string>
    <string name="mealOption6">Brown ($1914)</string>
    <string name="mealOption7">Gold ($1340)</string>
    <string name="mealOption8">Silver ($930)</string>
    <string name="mealOption9">Bronze ($515)</string>
    <string name="mealOptionCustom">Custom</string>

    <string name="mealOptionValue1">1300</string>
    <string name="mealOptionValue2">700</string>
    <string name="mealOptionValue3">500</string>
    <string name="mealOptionValue4">300</string>
    <string name="mealOptionValue5">2669</string>
    <string name="mealOptionValue6">1914</string>
    <string name="mealOptionValue7">1340</string>
    <string name="mealOptionValue8">930</string>
    <string name="mealOptionValue9">515</string>

    <string name="calculate">Calculate</string>

    <!-- Date strings -->
    <string name="startDate">08/22/2016</string>
    <string name="endDate">12/17/2016</string>
    <string name="daysOff">3</string>

    <!-- Results strings -->
    <string name="summaryTop">You can spend</string>
    <string name="summaryBottom">today and still be on schedule.</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>

    <string name="initialHeader">Average</string>
    <string name="currentHeader">Currently</string>
    <string name="differenceHeader">Difference</string>

    <!-- Snackbar messages  -->
    <string name="dismiss">Dismiss</string>
    <string name="remainingGreaterThanInitial">The remaining balance cannot be greater than the initial balance</string>
    <string name="dateOutOfRangeMessage">Today is not in the date range and some calculations may be off</string>
    <string name="endDateBeforeStart">The end date must be after the start date plus the days off</string>
    <string name="totalNotEntered">The total days off must be entered with the past days off</string>
    <string name="pastGreaterThanTotal">The past days off cannot be more than the total days off</string>
    <string name="remainingBalanceNotEntered">The remaining balance must be entered</string>

    <!-- Settings strings -->
    <string name="saveLabel">Save values?</string>
    <string name="enabledSaveDesc">The values are being saved</string>
    <string name="disabledSaveDesc">The values are not being saved</string>

    <!-- Help strings -->
    <string name="actionButtonsHeader">Toolbar buttons</string>
    <string name="actionButtons">• The pawprint button opens Tigerbucks (may need a refresh to load content)\n• The \'e\' button opens eServices</string>
    <string name="userHeader">User fields</string>
    <string name="userFields">• Rollover: How much you are rolling over from a previous semester\n• Remaining balance: How much you have now\n• Click on the meal plan and term drop-downs to change them\n• Click on the dates to change them\n• Total days off: The total number of days off in the date range\n• Past days off: The number of days off that have already past</string>
    <string name="resultsHeader">Results fields</string>
    <string name="resultsFields">• Average: Average amount you can spend based on starting dining dollars\n• Currently: Average amount you can spend based on current dining dollars\n• Difference: Currently - Average</string>

    <!-- About strings -->
    <string name="appInfo">RIT Dining Planner by Alderfer Studios</string>
    <string name="version">Version: </string>
    <string name="versionInfo">Version: 0.0.0</string>
    <string name="openSource">This app is open source. You can find it here: <a href="https://github.com/BenAlderfer/RIT-Dining-Planner-Android">https://github.com/BenAlderfer/RIT-Dining-Planner-Android</a></string>
    <string name="translate">If you would like to translate this app, please email <a href="mailto:alderferstudios@gmail.com">alderferstudios@gmail.com</a> with your request and I will send you instructions.\n\nIf you already know how to do this, you can edit the strings.xml (\\app\\src\\main\\res\\values) file in the source and send it to the above email.</string>
    <string name="contact">If you have any questions, bug reports, or suggestions, contact: <a href="mailto:alderferstudios@gmail.com">alderferstudios@gmail.com</a>\n\nPlease include your device and version of Android with any bug reports.\n\nIf you run into an error while using the app, please tap \"Report\" to send the error message to me.</string>
    <string name="donate">If you would like to show your appreciation, here\'s how:\n\n• Donate to a charity - they need it more\n• Paypal or Venmo: benalderfer974@gmail.com</string>

</resources>
