<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alderferstudios.budgetsplitter.MainActivity">

    <item
        android:id="@+id/tigerbucks"
        android:icon="@drawable/t_button"
        android:orderInCategory="1"
        android:title="@string/tigerbucks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/eservices"
        android:icon="@drawable/e_button"
        android:orderInCategory="2"
        android:title="@string/eservices"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="99"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
